--- a/index.html
+++ b/index.html
@@ -1,8 +1,55 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap-grid.min.css">
+<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+<style>
+  #canvas {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 70vw;
+    height: 100vh;
+  }
+</style>
 </head>
 <body>
+<header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+</header>
+<canvas id=canvas></canvas>
 <script src="node_modules/three/build/three.min.js"></script>
 <script src="js/skin.js"></script>
 <script>
@@ -20,6 +67,7 @@ const localRaycaster = new THREE.Raycaster();
 
 function init() {
   renderer = new THREE.WebGLRenderer({
+    canvas: document.getElementById('canvas'),
     antialias: true,
     alpha: true,
   });
@@ -28,8 +76,6 @@ function init() {
 
   // window.browser.magicleap.RequestDepthPopulation(true);
   // renderer.autoClear = false;
-
-  document.body.appendChild(renderer.domElement);
 
   scene = new THREE.Scene();
   scene.matrixAutoUpdate = false;
@@ -450,6 +496,9 @@ function init() {
     );
     _updateSkin();
   });
+  window.addEventListener('resize', e => {
+    renderer.setSize(window.innerWidth, window.innerHeight);
+  });
 
   focused = true;
 }
@@ -478,6 +527,5 @@ function animate() {
 renderer.setAnimationLoop(animate);
 
 </script>
-<canvas width="1918" height="1471" style="width: 1279px; height: 981px;"></canvas>
 </body>
 </html>
