Use local three.js/bootstrap file references

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
 <style>
   #canvas {
     position: absolute;
@@ -50,7 +50,7 @@
 </nav>
 </header>
 <canvas id=canvas></canvas>
-<script src="node_modules/three/build/three.min.js"></script>
+<script src="js/three.min.js"></script>
 <script src="js/skin.js"></script>
 <script>
 
