CSS/navbar/layout footer

--- a/index.html
+++ b/index.html
@@ -1,57 +1,93 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
-<style>
-  #canvas {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 70vw;
-    height: 100vh;
-  }
-</style>
+<link rel="stylesheet" type="text/css" href="style/index.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
 <header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Exokit</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="#">Features</a>
+            <a class="nav-item nav-link" href="#">Docs</a>
+            <a class="nav-item nav-link disabled" href="#">Blog</a>
+            <a class="nav-item nav-link disabled" href="#">Contact</a>
+          </div>
         </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+      </nav>
 </header>
 <canvas id=canvas></canvas>
 <script src="js/three.min.js"></script>
 <script src="js/skin.js"></script>
 <script src="js/hero.js"></script>
+
+<footer>
+  <div class="row footer">
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+      <div class="row">
+        <div class="col-4">
+          <p>Find Us</p>
+          <br/>
+          <p>101 Kensington Steet,</p>
+          <p>Monteral, Canada.</p>
+        </div>
+        <div class="col-4">
+            <p>Support</p>
+            <p>Careers</p>
+            <p>About</p>
+        </div>
+        <div class="col-4">
+            <p>Press</p>
+            <p>Investor</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+      <div class="row text-center justify-content-center">
+          <form>
+            <div class="form-group">
+              <h5>Sign up for updates.</h5>
+              <input type="email" class="form-control" aria-describedby="email" placeholder="Email">
+            </div>
+            <button type="submit" class="btn btn-primary inline-block">Sign up</button>
+          </form>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+      <div class="row">
+        <div class="col-12">
+          <p>Find us online</p>
+        </div>
+        <div class="col-12">
+          <div class="row">
+            <div class="col-6">
+              <p>Social</p>
+            </div>
+            <div class="col-6">
+              <p>Community</p>
+              <i class="fab fa-twitch p-1"></i>
+              <i class="fab fa-discord p-1"></i>
+              <i class="fab fa-slack p-1"></i>
+              <i class="fab fa-twitter p-1"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12">
+        <div class="row">
+          <div class="col-12">
+              <p class="text-center">Copyright &copy; 2018 Zeo Inc.</p>
+          </div>
+        </div>
+      </div>
+  </div>
+</footer>
+
 </body>
 </html>
