--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="col-12">
         <div class="row">
           <div class="col-12">
-              <p class="text-center">Copyright &copy; 2018 Zeo Inc.</p>
+              <p class="text-center">Copyright &copy; 2018 Exokit Inc.</p>
           </div>
         </div>
       </div>
