get started section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
 <script src="js/skin.js"></script>
 <script src="js/hero.js"></script>
 
+
+<div class="row getStarted justify-content-center">
+  <div class="col-12 text-center pt-5 ayy">
+    <h1>Latest WebXR</h2>
+    <h1>features, today.</h2>
+  </div>
+  <div class="verticalLine"></div>
+  <div class="col-12 text-center pt-0 ayy">
+    <h3 class="">Get Started</h3>
+  </div>
+</div>
+
 <footer>
   <div class="row footer">
     <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
