--- a/index.html
+++ b/index.html
@@ -26,14 +26,82 @@
 <script src="js/skin.js"></script>
 <script src="js/hero.js"></script>
 
+<div class="row quotes">
+  <div class="col-12 quotesPusher">
+    <h1 class="display-4">Chatter #exokit</h1>
+  </div>
+  <div class="row">
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-2 pb-2">
+      <div class="card">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-4">
+              <img class="quotesPic" src="../media/sjw.jpg"></img>
+            </div>
+            <div class="col-8">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-2 pb-2">
+      <div class="card">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-4">
+                <img class="quotesPic" src="../media/kylie.jpg"></img>
+              </div>
+              <div class="col-8">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-2 pb-2">
+      <div class="card">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-4">
+                <img class="quotesPic" src="../media/dude.jpg"></img>
+              </div>
+              <div class="col-8">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-2 pb-2">
+      <div class="card">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-4">
+                <img class="quotesPic" src="../media/obama.jpg"></img>
+              </div>
+              <div class="col-8">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+  </div>
+</div>
+
 
 <div class="row getStarted justify-content-center">
-  <div class="col-12 text-center pt-5 ayy">
+  <div class="col-12 text-center pt-5">
     <h1>Latest WebXR</h2>
     <h1>features, today.</h2>
   </div>
   <div class="verticalLine"></div>
-  <div class="col-12 text-center pt-0 ayy">
+  <div class="col-12 text-center pt-0">
     <h3 class="">Get Started</h3>
   </div>
 </div>
