--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
 <script src="js/skin.js"></script>
 <script src="js/hero.js"></script>
 
+<div class="row whatIsExokit">
+  <div class="col-12 text-center whatIsExokitPusher">
+      <h1>What is Exokit?</h1>
+      <h4>Exokit is an XR engine that runs your code as native.</h4>
+      <img class="whatIsExokitImg" src="../media/whatIsExokit.png"></img>
+  </div>
+</div>
+
 <div class="row quotes">
   <div class="col-12 quotesPusher">
-    <h1 class="display-4">Chatter #exokit</h1>
+    <h1>Chatter #exokit</h1>
   </div>
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-2 pb-2">
