--- a/index.html
+++ b/index.html
@@ -34,6 +34,56 @@
   </div>
 </div>
 
+<div class="row madeWithExokit">
+
+  <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+    <img class="madeWithExokitMainImg img-fluid" src="../media/madeWithExokit.png"></img>
+  </div>
+
+  <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+    <h1>Made with Exokit</h1>
+    <hr>
+
+    <div class="row">
+      <div class="col-6">
+          <h2>The Expanse</h2>
+        </div>
+        <div class="col-6">
+          <p>Build, Experince & Share the future of social VR.</p>
+        </div>
+    </div>
+
+    <div class="row pt-5">
+      <div class="col-12">
+          <h5>The Expanse</h2>
+      </div>
+      <div class="col-12">
+          <p>Project: Aurora</p>
+      </div>
+      <div class="col-12">
+          <p>Year: 2018</p>
+      </div>
+    </div>
+
+    <div class="madeWithExokitPusher"></div>
+
+    <h5>Other Projects</h5>
+
+    <div class="row">
+      <div class="col-4">
+          <img class="madeWithExokitSubImg img-fluid" src="../media/activeTheory.png"></img>
+        </div>
+      <div class="col-4">
+          <img class="madeWithExokitSubImg img-fluid" src="../media/exokit.png"></img>
+        </div>
+      <div class="col-4">
+          <img class="madeWithExokitSubImg img-fluid" src="../media/emukit.png"></img>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 <div class="row quotes">
   <div class="col-12 quotesPusher">
     <h1>Chatter #exokit</h1>
