fix media paths

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
   <div class="col-12 text-center whatIsExokitPusher">
       <h1>What is Exokit?</h1>
       <h4>Exokit is an XR engine that runs your code as native.</h4>
-      <img class="whatIsExokitImg" src="../media/whatIsExokit.png"></img>
+      <img class="whatIsExokitImg" src="media/whatIsExokit.png"></img>
   </div>
 </div>
 
 <div class="row madeWithExokit">
 
   <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-    <img class="madeWithExokitMainImg img-fluid" src="../media/madeWithExokit.png"></img>
+    <img class="madeWithExokitMainImg img-fluid" src="media/madeWithExokit.png"></img>
   </div>
 
   <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
@@ -71,13 +71,13 @@
 
     <div class="row">
       <div class="col-4">
-          <img class="madeWithExokitSubImg img-fluid" src="../media/activeTheory.png"></img>
+          <img class="madeWithExokitSubImg img-fluid" src="media/activeTheory.png"></img>
         </div>
       <div class="col-4">
-          <img class="madeWithExokitSubImg img-fluid" src="../media/exokit.png"></img>
+          <img class="madeWithExokitSubImg img-fluid" src="media/exokit.png"></img>
         </div>
       <div class="col-4">
-          <img class="madeWithExokitSubImg img-fluid" src="../media/emukit.png"></img>
+          <img class="madeWithExokitSubImg img-fluid" src="media/emukit.png"></img>
       </div>
     </div>
 
@@ -94,7 +94,7 @@
         <div class="card-body">
           <div class="row">
             <div class="col-4">
-              <img class="quotesPic" src="../media/sjw.jpg"></img>
+              <img class="quotesPic" src="media/sjw.jpg"></img>
             </div>
             <div class="col-8">
               <h5 class="card-title">Card title</h5>
@@ -109,7 +109,7 @@
           <div class="card-body">
             <div class="row">
               <div class="col-4">
-                <img class="quotesPic" src="../media/kylie.jpg"></img>
+                <img class="quotesPic" src="media/kylie.jpg"></img>
               </div>
               <div class="col-8">
                 <h5 class="card-title">Card title</h5>
@@ -124,7 +124,7 @@
           <div class="card-body">
             <div class="row">
               <div class="col-4">
-                <img class="quotesPic" src="../media/dude.jpg"></img>
+                <img class="quotesPic" src="media/dude.jpg"></img>
               </div>
               <div class="col-8">
                 <h5 class="card-title">Card title</h5>
@@ -139,7 +139,7 @@
           <div class="card-body">
             <div class="row">
               <div class="col-4">
-                <img class="quotesPic" src="../media/obama.jpg"></img>
+                <img class="quotesPic" src="media/obama.jpg"></img>
               </div>
               <div class="col-8">
                 <h5 class="card-title">Card title</h5>
