--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="style/index.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body>
 <header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Exokit</a>
+<nav class="navbar navbar-expand-lg navbar-light pr-5 pl-5">
+  <a class="navbar-brand" href="#"><span>Exokit</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#">Features</a>
-      <a class="nav-item nav-link" href="#">Docs</a>
-      <a class="nav-item nav-link disabled" href="#">Blog</a>
-      <a class="nav-item nav-link disabled" href="#">Contact</a>
+      <a class="nav-item nav-link active pr-4 pl-4" href="#"><h5 class="font-weight-normal">Features</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="#"><h5 class="font-weight-normal">Docs</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="#"><h5 class="font-weight-normal">Blog</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="#"><h5 class="font-weight-normal">Contact</h2></a>
     </div>
   </div>
 </nav>
