--- a/index.html
+++ b/index.html
@@ -91,65 +91,66 @@
 </div>
 
 <div class="row quotes">
-  <div class="col-12 quotesPusher">
+  <div class="col-12 quotesPusher pl-5 pb-5">
     <h1>Chatter #exokit</h1>
+    <h4 class="font-weight-light">What are people saying about Exokit?</h5>
   </div>
   <div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-2 pb-2">
-      <div class="card">
-        <div class="card-body">
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-4 pb-4">
+      <div class="card shadow">
+        <div class="card-body shadow">
           <div class="row">
-            <div class="col-4">
+            <div class="col-4 align-self-center">
               <img class="quotesPic" src="media/sjw.jpg"></img>
             </div>
             <div class="col-8">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text font-weight-light">Ree, illumanti uses Chrome against the people, free our people from Chrome, this is democracy! #exokit</p>
+              <small class="font-weight-normal">- Milo Dianosuraus Rex</small>
               </div>
             </div>
           </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-2 pb-2">
-      <div class="card">
-          <div class="card-body">
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-4 pb-4">
+      <div class="card shadow">
+          <div class="card-body shadow">
             <div class="row">
-              <div class="col-4">
+              <div class="col-4 align-self-center">
                 <img class="quotesPic" src="media/kylie.jpg"></img>
               </div>
               <div class="col-8">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text font-weight-light">hehe, check out my latest modeling shoot in VR/AR using this cool app called Exokit xoxo #exokit</p>
+                <small class="font-weight-normal">- Kiley Jenner</small>
                 </div>
               </div>
             </div>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-2 pb-2">
-      <div class="card">
-          <div class="card-body">
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-4 pb-4">
+      <div class="card shadow">
+          <div class="card-body shadow">
             <div class="row">
-              <div class="col-4">
+              <div class="col-4 align-self-center">
                 <img class="quotesPic" src="media/dude.jpg"></img>
               </div>
               <div class="col-8">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text font-weight-light">Yo my dude, Exokit is the best thing since the commodore 64. I'm telling all my bros! #exokit</p>
+                <small class="font-weight-normal">- Steve Harley</small>
                 </div>
               </div>
             </div>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-2 pb-2">
-      <div class="card">
-          <div class="card-body">
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-4 pb-4">
+      <div class="card shadow">
+          <div class="card-body shadow">
             <div class="row">
-              <div class="col-4">
+              <div class="col-4 align-self-center">
                 <img class="quotesPic" src="media/obama.jpg"></img>
               </div>
               <div class="col-8">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text font-weight-light">During my stay at the White House, we anaylzed whether or not Exokit was going to take over Chrome.</p>
+                <small class="font-weight-normal">- Barrack Obama</small>
                 </div>
               </div>
             </div>
