hero HTML overlay

--- a/index.html
+++ b/index.html
@@ -27,10 +27,23 @@
   </div>
 </nav>
 </header>
+
 <canvas id=canvas></canvas>
+
 <script src="js/three.min.js"></script>
 <script src="js/skin.js"></script>
 <script src="js/hero.js"></script>
+
+<div id="overlay">
+    <h1>Ship XR Once,</h1>
+    <h1>Everywhere.</h1>
+    <h3 class="font-weight-light">The webXR engine you want today, with the features of tomorrow.</h1>
+    <div id=heroPusher></div>
+    <h4>Download now</h4>
+    <i class="fab fa-apple fa-2x p-2"></i>
+    <i class="fab fa-windows fa-2x p-2"></i>
+    <i class="fab fa-linux fa-2x p-2"></i>
+</div>
 
 <div class="row whatIsExokit">
   <div class="col-12 text-center whatIsExokitPusher">
@@ -90,13 +103,13 @@
   </div>
 </div>
 
-<div class="row quotes">
+<div class="row quotes pb-5">
   <div class="col-12 quotesPusher pl-5 pb-5">
     <h1>Chatter #exokit</h1>
     <h4 class="font-weight-light">What are people saying about Exokit?</h5>
   </div>
   <div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-4 pb-4">
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-3 pb-3">
       <div class="card shadow">
         <div class="card-body shadow">
           <div class="row">
@@ -111,7 +124,7 @@
           </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-4 pb-4">
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-3 pb-3">
       <div class="card shadow">
           <div class="card-body shadow">
             <div class="row">
@@ -126,7 +139,7 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-4 pb-4">
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-3 pb-3">
       <div class="card shadow">
           <div class="card-body shadow">
             <div class="row">
@@ -141,7 +154,7 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-4 pb-4">
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 pt-3 pb-3">
       <div class="card shadow">
           <div class="card-body shadow">
             <div class="row">
