--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
 </div>
 
 
-<div class="row getStarted justify-content-center">
-  <div class="col-12 text-center pt-5">
-    <h1>Latest WebXR</h2>
-    <h1>features, today.</h2>
+<div class="row getStarted justify-content-center" style="padding-top: 150px;">
+  <div class="col-12 text-center">
+    <h1>Latest WebXR</h1>
+    <h1>features, today.</h1>
   </div>
   <div class="verticalLine"></div>
-  <div class="col-12 text-center pt-0">
-    <h3 class="">Get Started</h3>
+  <div class="col-12 text-center pt-0 mt-0">
+    <h5 style="margin-bottom: 150px;">Get Started</h5>
   </div>
 </div>
 
