--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <nav class="navbar navbar-expand-lg navbar-light pr-5 pl-5">
-  <a class="navbar-brand" href="#"><span>Exokit</span></a>
+  <a class="navbar-brand" href="#"><img src="media/logo.svg"><span>Exokit</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
