--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body>
 <header>
 <nav class="navbar navbar-expand-lg navbar-light pr-5 pl-5">
-  <a class="navbar-brand" href="#"><img src="media/logo.svg"><span>Exokit</span></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <a class="navbar-brand" href="#"><img class="mb-2" src="media/logo.svg"><span>Exokit</span></a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active pr-4 pl-4" href="#"><h5 class="font-weight-normal">Features</h2></a>
