--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 <canvas id=canvas></canvas>
 
 <script src="js/three.min.js"></script>
+<script src="js/TGALoader.js"></script>
+<script src="js/FBXLoader.js"></script>
+<script src="js/inflate.min.js"></script>
 <script src="js/skin.js"></script>
 <script src="js/hero.js"></script>
 
