--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <canvas id=canvas></canvas>
 
 <script src="js/three.min.js"></script>
+<script src="js/Reflector.js"></script>
 <script src="js/ColladaLoader.js"></script>
 <script src="js/skin.js"></script>
 <script src="js/hero.js"></script>
