Capitalize WebXR in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div id="overlay">
     <h1>Ship XR Once,</h1>
     <h1>Everywhere.</h1>
-    <h3 class="font-weight-light">The webXR engine you want today, with the features of tomorrow.</h1>
+    <h3 class="font-weight-light">The WebXR engine you want today, with the features of tomorrow.</h1>
     <div id=heroPusher></div>
     <h4>Download now</h4>
     <i class="fab fa-apple fa-2x p-2"></i>
