Update index.html docs link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active pr-4 pl-4" href="#"><h5 class="font-weight-normal">Features</h2></a>
-      <a class="nav-item nav-link pr-4 pl-4" href="#"><h5 class="font-weight-normal">Docs</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="#"><h5 class="font-weight-normal">Blog</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="#"><h5 class="font-weight-normal">Contact</h2></a>
     </div>
