--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
       <h4>Exokit is an XR engine that runs your code as native.</h4>
       <div class="featurePusher"></div>
       <div class="row pt-5">
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
           <p class="featureText">his book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
           <p class="featureText">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
           <p class="featureText">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
           <h3 class="featureMain">Javascript/HTML/WebXR</h3>
           <div class="featureArrow featureMain"></div>
           <h3 class="featureMain">Exokit</h3>
           <div class="featureArrow featureMain"></div>
           <div class="row">
-            <div class="col-4">
+            <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
                 <img class="mlImg featureMain" src="media/ML.png"></img>
             </div>
-            <div class="col-4">
-                <img class="mlImg featureMain" src="media/vive.png"></img>
+            <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                <img class="viveImg featureMain" src="media/vive.png"></img>
             </div>
-            <div class="col-4">
-                <img class="mlImg featureMain" src="media/oculus.png"></img>
+            <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                <img class="oculusImg featureMain" src="media/oculus.png"></img>
             </div>
           </div>
         </div>
