use SVG, invert to white

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
           <h3 class="featureMain">Javascript/HTML/WebXR</h3>
           <div class="featureArrow featureMain"></div>
-          <img class="exokitImg featureMain" src="media/favicon.png"></img>
+          <img class="exokitImg featureMain" src="media/logo-white.svg"></img>
           <h3 class="featureMain">Exokit</h3>
           <div class="featureArrow featureMain"></div>
           <div class="row">
