exokitName use our font

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <h3 class="featureMain">Javascript/HTML/WebXR</h3>
           <div class="featureArrow featureMain"></div>
           <img class="exokitImg featureMain" src="media/logo-white.svg"></img>
-          <h3 class="featureMain">Exokit</h3>
+          <h3 class="featureMain exokitName">Exokit</h3>
           <div class="featureArrow featureMain"></div>
           <div class="row">
             <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
