--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <a class="navbar-brand" href="#"><img class="mb-2" src="media/logo.svg"><span>Exokit</span></a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active pr-4 pl-4" href="#"><h5 class="font-weight-normal">Features</h2></a>
+      <a class="nav-item nav-link active pr-4 pl-4" href="/"><h5 class="font-weight-normal">Features</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
-      <a class="nav-item nav-link pr-4 pl-4" href="#"><h5 class="font-weight-normal">Blog</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="https://webmr.io/blog/"><h5 class="font-weight-normal">Blog</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="#"><h5 class="font-weight-normal">Contact</h2></a>
     </div>
   </div>
@@ -57,9 +57,9 @@
     <h3 class="font-weight-light">The WebXR engine you want today, with the features of tomorrow.</h1>
     <div id=heroPusher></div>
     <h4>Download now</h4>
-    <i class="fab fa-apple fa-2x p-2"></i>
-    <i class="fab fa-windows fa-2x p-2"></i>
-    <i class="fab fa-linux fa-2x p-2"></i>
+    <a href="https://get.webmr.io/mac"><i class="fab fa-apple fa-2x p-2"></i></a>
+    <a href="https://get.webmr.io/linux"><i class="fab fa-linux fa-2x p-2"></i></a>
+    <a href="https://get.webmr.io/windows"><i class="fab fa-windows fa-2x p-2"></i></a>
 </div>
 
 <div class="row whatIsExokit">
@@ -262,10 +262,10 @@
       <div class="row pl-5">
         <div class="col-12 pl-0">
           <p>Find us online</p>
-          <i class="fab fa-twitch pt-2 pb-2 pr-2"></i>
-          <i class="fab fa-discord p-2"></i>
-          <i class="fab fa-slack p-2"></i>
-          <i class="fab fa-twitter p-2"></i>
+          <a class="footerLink" href="https://www.twitch.tv/avaer"><i class="fab fa-twitch pt-2 pb-2 pr-2"></i></a>
+          <a class="footerLink" href="https://discordapp.com/invite/Apk6cZN"><i class="fab fa-discord p-2"></i></a>
+          <a class="footerLink" href="https://exokit.slack.com/join/shared_invite/enQtNDI3NjcxNzYwMDIxLWU2NmFmOTEzMzk4NWNiYjRhMjVkYzcyNjg5YjUyMzZkYWM1ZGI4M2IwYWZiMjNlMTJjMDlkM2U3Y2JiNTc2M2Q"><i class="fab fa-slack p-2"></i></a>
+          <a class="footerLink" href="https://twitter.com/webmixedreality"><i class="fab fa-twitter p-2"></i></a>
         </div>
         <div class="col-12 pl-0">
           <div class="row pt-5">
