--- a/index.html
+++ b/index.html
@@ -49,6 +49,36 @@
       }
     }
   }
+
+  const changeCompany = (company) => {
+    switch (company){
+      case 'expanse':
+        document.getElementById('madeWithExokitMainImg').src = 'media/expanse.png';
+        document.getElementById('madeWithTitle').innerHTML = 'The Expanse';
+      document.getElementById('madeWithSlogan').innerHTML = 'Build, Experince & Share the future of social VR.';
+      document.getElementById('madeWithTitleSub').innerHTML = 'The Expanse';
+      document.getElementById('madeWithProject').innerHTML = 'Project: Aurora';
+      document.getElementById('madeWithYear').innerHTML = 'Year 2018 - Now';
+      break;
+      case 'active':
+      document.getElementById('madeWithExokitMainImg').src = 'media/activeDemo.png';
+      document.getElementById('madeWithTitle').innerHTML = 'Active Theory';
+      document.getElementById('madeWithSlogan').innerHTML = 'Active Theory is a studio building creative digital experiences. We are  pushing the future of web technology.';
+      document.getElementById('madeWithTitleSub').innerHTML = 'Active Theory';
+      document.getElementById('madeWithProject').innerHTML = 'Project: xyz';
+      document.getElementById('madeWithYear').innerHTML = 'Year 2018 - Now';
+
+      break;
+      case 'emukit':
+      document.getElementById('madeWithExokitMainImg').src = 'media/emukitDemo.png';
+      document.getElementById('madeWithTitle').innerHTML = 'Emukit';
+      document.getElementById('madeWithSlogan').innerHTML = 'The VR emulator solution is called Emukit and works best with Exokit, a JavaScript web browser for AR and VR environment.';
+      document.getElementById('madeWithTitleSub').innerHTML = 'Emukit';
+      document.getElementById('madeWithProject').innerHTML = 'Project: Nintendo 64 VR Emulation';
+      document.getElementById('madeWithYear').innerHTML = 'Year 2018 - Now';
+      break;
+    }
+  }
 </script>
 
 <div id="overlay">
@@ -96,10 +126,10 @@
   </div>
 </div>
 
-<div class="row madeWithExokit">
+<div class="row madeWithExokit pt-5">
 
-  <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-    <img class="madeWithExokitMainImg img-fluid" src="media/madeWithExokit.png"></img>
+  <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center">
+    <img id="madeWithExokitMainImg" class="img-fluid pb-5" src="media/expanse.png"></img>
   </div>
 
   <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
@@ -108,22 +138,22 @@
 
     <div class="row">
       <div class="col-6">
-          <h2>The Expanse</h2>
+          <h2 id="madeWithTitle">The Expanse</h2>
         </div>
         <div class="col-6">
-          <p>Build, Experince & Share the future of social VR.</p>
+          <p id="madeWithSlogan">Build, Experince & Share the future of social VR.</p>
         </div>
     </div>
 
     <div class="row pt-5">
       <div class="col-12">
-          <h5>The Expanse</h2>
+          <h5 id="madeWithTitleSub">The Expanse</h2>
       </div>
       <div class="col-12">
-          <p>Project: Aurora</p>
+          <p id="madeWithProject">Project: Aurora</p>
       </div>
       <div class="col-12">
-          <p>Year: 2018</p>
+          <p id="madeWithYear">Year: 2018</p>
       </div>
     </div>
 
@@ -133,13 +163,13 @@
 
     <div class="row">
       <div class="col-4">
-          <img class="madeWithExokitSubImg img-fluid" src="media/activeTheory.png"></img>
+          <img onclick="changeCompany('active')" class="madeWithExokitSubImg img-fluid" src="media/activeTheory.png"></img>
         </div>
       <div class="col-4">
-          <img class="madeWithExokitSubImg img-fluid" src="media/exokit.png"></img>
+          <img onclick="changeCompany('expanse')" class="madeWithExokitSubImg img-fluid" src="media/expanse.png"></img>
         </div>
       <div class="col-4">
-          <img class="madeWithExokitSubImg img-fluid" src="media/emukit.png"></img>
+          <img onclick="changeCompany('emukit')" class="madeWithExokitSubImg img-fluid" src="media/emukit.png"></img>
       </div>
     </div>
 
