--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-  <title>Exokit</title>
+  <title>Exokit - Home</title>
   <link rel="icon" href="media/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style/index.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
-<body>
+<body class="home">
 <header>
 <nav class="navbar navbar-expand-lg navbar-light pr-5 pl-5">
   <a class="navbar-brand" href="#"><img class="mb-2" src="media/logo.svg"><span>Exokit</span></a>
@@ -16,7 +16,7 @@
       <a class="nav-item nav-link active pr-4 pl-4" href="/"><h5 class="font-weight-normal">Features</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="https://webmr.io/blog/"><h5 class="font-weight-normal">Blog</h2></a>
-      <a class="nav-item nav-link pr-4 pl-4" href="#"><h5 class="font-weight-normal">Contact</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
     </div>
   </div>
 </nav>
@@ -167,7 +167,7 @@
 <div class="row whatIsExokit">
   <div class="col-12 text-center whatIsExokitPusher">
       <h1>What is Exokit?</h1>
-      <h4>Exokit is an XR engine that runs your code as native.</h4>
+      <h4 class="font-weight-light">Exokit is an XR engine that runs your code as native.</h4>
       <div class="featurePusher"></div>
       <div class="row pt-5">
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
@@ -336,10 +336,10 @@
       <div class="row w-100 text-center mt-3">
           <div class="col-3"></div>
           <div class="col-3">
-            <i class="fas fa-arrow-left fa-2x" onclick="changeQuotes()"></i>
+            <i class="fas fa-arrow-left fa-2x quoteArrow" onclick="changeQuotes()"></i>
           </div>
           <div class="col-3">
-            <i class="fas fa-arrow-right fa-2x" onclick="changeQuotes()"></i>
+            <i class="fas fa-arrow-right fa-2x quoteArrow" onclick="changeQuotes()"></i>
           </div>
           <div class="col-3"></div>
         </div>
