contact section mobile optimize

--- a/contact.html
+++ b/contact.html
@@ -23,36 +23,36 @@
 </header>
 
 <div class="row contactSection">
-    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 p-5">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 p-4 pr-5 pl-5">
         <h1>Need Help? Send Us a Message!</h1>
         <form>
-            <div class="row pt-3">
-                <div class="col-6">
-                    <input type="text" class="form-control firstNameInput p-4" aria-describedby="First Name" placeholder="First Name">
+            <div class="row mt-4">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <input type="text" class="form-control firstNameInput p-4 mb-3" aria-describedby="First Name" placeholder="First Name">
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <input type="text" class="form-control lastNameInput p-4" aria-describedby="Last Name" placeholder="Last Name">
                 </div>
             </div>
             <div class="row pt-3 pb-3">
-                <div class="col-6">
-                    <input type="email" class="form-control emailInputContact p-4" aria-describedby="Email" placeholder="Email">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <input type="email" class="form-control emailInputContact p-4 mb-3" aria-describedby="Email" placeholder="Email">
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <input type="text" class="form-control companyInput p-4" aria-describedby="Company" placeholder="Company">
                 </div>
             </div>
             <div class="row pt-3 pb-3">
                 <div class="col-12">
                     <div class="form-group">
-                        <textarea class="form-control" id="mesageInput"  placeholder="Message" rows="3"></textarea>
+                        <textarea class="form-control" id="mesageInput" placeholder="Message" rows="3"></textarea>
                     </div>
                 </div>
             </div>
             <button type="submit" class="contactButton btn btn-primary inline ml-2 mt-2 mb-2 p-3 pl-5 pr-5">Submit</button>
         </form>
     </div>
-    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 p-5">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 p-4 pr-5 pl-5 pb-5">
         <h1 class="pb-5">Come visit us.</h1>
         <h3 class="font-weight-light">2576 Heather Sees Way</h3>
         <h3 class="font-weight-light">Muskogee OK</h3>
