--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body class="contact">
 <header>
 <nav class="navbar navbar-expand-lg navbar-light pr-5 pl-5">
-  <a class="navbar-brand" href="#"><img class="mb-2" src="media/logo.svg"><span>Exokit</span></a>
+  <a class="navbar-brand" href="/"><img class="mb-2" src="media/logo.svg"><span>Exokit</span></a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active pr-4 pl-4" href="/"><h5 class="font-weight-normal">Features</h2></a>
