add more nav links

--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,14 @@
 <body class="contact">
 <header>
 <nav class="navbar navbar-expand-lg navbar-light pr-5 pl-5">
-  <a class="navbar-brand" href="/"><img class="mb-2" src="media/logo.svg"><span>Exokit</span></a>
+  <a class="navbar-brand" href="index.html"><img class="mb-2" src="media/logo.svg"><span>Exokit</span></a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active pr-4 pl-4" href="/"><h5 class="font-weight-normal">Features</h2></a>
+      <a class="nav-item nav-link active pr-4 pl-4" href="features.html"><h5 class="font-weight-normal">Features</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
-      <a class="nav-item nav-link pr-4 pl-4" href="https://webmr.io/blog/"><h5 class="font-weight-normal">Blog</h2></a>
-      <a class="nav-item nav-link pr-4 pl-4" href="#"><h5 class="font-weight-normal">Contact</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="blog.html"><h5 class="font-weight-normal">Blog</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="about.html"><h5 class="font-weight-normal">About</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
     </div>
   </div>
 </nav>
@@ -45,7 +46,7 @@
             <div class="row pt-3 pb-3">
                 <div class="col-12">
                     <div class="form-group">
-                        <textarea class="form-control" id="mesageInput" placeholder="Message" rows="3"></textarea>
+                        <textarea class="form-control" id="messageInput" placeholder="Message" rows="3"></textarea>
                     </div>
                 </div>
             </div>
