--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,11 @@
   <a class="navbar-brand" href="index.html"><img class="mb-2" src="media/logo.svg"><span>Exokit</span></a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active pr-4 pl-4" href="features.html"><h5 class="font-weight-normal">Features</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="features.html"><h5 class="font-weight-normal">Features</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="blog.html"><h5 class="font-weight-normal">Blog</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="about.html"><h5 class="font-weight-normal">About</h2></a>
-      <a class="nav-item nav-link pr-4 pl-4" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
+      <a class="nav-item nav-link active pr-4 pl-4" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
     </div>
   </div>
 </nav>
