--- a/features.html
+++ b/features.html
@@ -28,7 +28,9 @@
         <h1 style="font-size: 60px;">Runs regular</h1>
         <h1 style="font-size: 60px;">HTML</h1>
         <h3 class="font-weight-light">Don't change your code!</h3>
-        <h3 class="font-weight-light">Just execute your WebXR in Exokit.</h3>    
+        <h3 class="font-weight-light">Just execute your WebXR in Exokit.</h3>
+        <br><br><br><br>
+        <h5 class="font-weight-normal">Download Now -</h5>    
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
         <img class="img-fluid" src="media/featuresHero.png"></img>
