fix activedemo pic bug

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         year.innerHTML = 'Year 2018 - Now';
       break;
       case 'active':
-        mainImg.src = 'media/activeDemo.png';
+        mainImg.src = 'media/activeDemoMain.png';
         title.innerHTML = 'Active Theory';
         slogan.innerHTML = 'Active Theory is a studio building creative digital experiences. We are  pushing the future of web technology.';
         titleSub.innerHTML = 'Active Theory';
