--- a/blog.html
+++ b/blog.html
@@ -51,39 +51,39 @@
     <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 text-center mb-5">
         <img src="media/introExokit.png" class="img-fluid">
         <h3 class="text-left p-4">Introducing Exokit</h3>
-        <p class="text-left p-2">A Javascript Web Engine For The Post Screen Era.</p>
+        <p class="text-left p-2 mr-3 ml-3">A Javascript Web Engine For The Post Screen Era.</p>
         <div class="row">
             <div class="col-6">
-                <p class="text-left">July 22nd, 2018</p>
+                <p class="text-left ml-2">July 22nd, 2018</p>
             </div>
             <div class="col-6">
-                <p class="text-right">Read More - </p>
+                <p class="text-right mr-2">Read More - </p>
             </div>
         </div>
     </div>
     <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 text-center mb-5">
         <img src="media/n64vr.png" class="img-fluid">
         <h3 class="text-left p-4">N64 VR With Javascript</h3>
-        <p class="text-left p-2">TLDR: I made an N64 emulator work in VR with Javascript and WebXR. Emukit is open source.</p>
+        <p class="text-left p-2 mr-3 ml-3">TLDR: I made an N64 emulator work in VR with Javascript and WebXR. Emukit is open source.</p>
         <div class="row">
             <div class="col-6">
-                <p class="text-left">July 22nd, 2018</p>
+                <p class="text-left ml-2">July 22nd, 2018</p>
             </div>
             <div class="col-6">
-                <p class="text-right">Read More - </p>
+                <p class="text-right mr-2">Read More - </p>
             </div>
         </div>
     </div>
     <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 text-center mb-5">
         <img src="media/domcanvas.png" class="img-fluid">
         <h3 class="text-left p-4">DOM To Canvas In Just 7 Years</h3>
-        <p class="text-left p-2">You know what’s harder than creating an alternate reality with Javascript? Drawing a div.</p>
+        <p class="text-left p-2 mr-3 ml-3">You know what’s harder than creating an alternate reality with Javascript? Drawing a div.</p>
         <div class="row">
             <div class="col-6">
-                <p class="text-left">July 22nd, 2018</p>
+                <p class="text-left ml-2">July 22nd, 2018</p>
             </div>
             <div class="col-6">
-                <p class="text-right">Read More - </p>
+                <p class="text-right mr-2">Read More - </p>
             </div>
         </div>
     </div>
