--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
 </script>
 
 <div id="overlay">
-    <h1>Ship XR Once,</h1>
-    <h1>Everywhere.</h1>
-    <h3 class="font-weight-light">The WebXR engine you want today, with the features of tomorrow.</h1>
+    <h1>A New XR Engine Approaches</h1>
+    <h2 class="font-weight-light">Run and ship WebXR apps on Magic Leap,</h2>
+    <h3 class="font-weight-light">Desktop and Mobile.</h1>
     <div id=heroPusher></div>
     <h4>Download now</h4>
     <a href="https://get.webmr.io/mac"><i class="fab fa-apple fa-2x p-2"></i></a>
@@ -165,24 +165,26 @@
     <a href="https://get.webmr.io/windows"><i class="fab fa-windows fa-2x p-2"></i></a>
 </div>
 
-<div class="row whatIsExokit">
+<div class="row whatIsExokit pt-4">
   <div class="col-12 text-center whatIsExokitPusher">
       <h1>What is Exokit?</h1>
       <h4 class="font-weight-light">Exokit is an XR engine that runs your code as native.</h4>
       <div class="featurePusher"></div>
       <div class="row pt-5">
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-          <h2 class="featureText pb-4">Title 1</h1>
-          <p class="featureText text-left">This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-          <p class="featureText text-left">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue;</p>
+          <h2 class="featureText pb-4">Power up your WebXR app</h1>
+          <h5 class="featureText text-left font-weight-light p-3">Exokit runs regular HTML+JS WebXR sites. Add hardware bindings, native code, and more with the APIs Exokit gives you access to.</h5>
+          <div class="featureTextPusher "></div>
           <div class="featureTextPusher"></div>
-          <h2 class="featureText pb-4">Title 2</h1>
-          <p class="featureText text-left">Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it?</p>
-          <p class="featureText text-left">But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted.</p>
-          <div class="featureTextPusher"></div>
-          <h2 class="featureText pb-4">Title 3</h1>
-            <p class="featureText text-left">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-            <p class="featureText text-left">But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted.</p>
+          <div class="featureTextPusher "></div>
+          <h2 class="featureText pb-4">Run apps in Exokit</h1>
+          <h5 class="featureText text-left font-weight-light p-3">Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
+          <div class="featureTextPusher "></div>
+          <div class="featureTextPusher "></div>
+          <div class="featureTextPusher "></div>
+          <h2 class="featureText pb-4">Ship your app</h1>
+            <h5 class="featureText text-left font-weight-light p-3">Get a package for Magic Leap World, Steam, and other app stores direct from URL or content Zip with Exoport.
+            </h5>
           <div class="featureTextPusher "></div>
           <div class="featureTextPusher "></div>
         </div>
