new features mockup, hero onscroll change, CSS

--- a/index.html
+++ b/index.html
@@ -220,13 +220,51 @@
   </div>
 </div>
 
-<div class="row madeWithExokit pt-5">
+<div class="row exokitFeatures pt-5">
+    <div class="featuresSpacer"></div>
+  <div class="col-12 text-center pt-5 h-5">
+    <h1 class="pt-5">Features</h1>
+    <h4 class="font-weight-light">Exokit is an XR engine that runs your code as native.</h4>
+  </div>
+  <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+    <div class="col-12 exokitFeature">
+      <img class="img-fluid mt-4 mb-3" src="media/window.png"></img>
+      <h3>Not a Browser</h4>
+      <h4 class="font-weight-light text-left p-4">Exokit is an XR engine, not a web browser. It's layers of web-powered realities, not screens floating in space.</h5>
+    </div>
+  </div>
+  <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+    <div class="col-12 exokitFeature">
+        <img class="img-fluid mt-4 mb-3" src="media/satelite.png"></img>
+        <h4>Futuristic APIs</h4>
+        <h4 class="font-weight-light text-left p-4">DOM-to-canvas, 3D iframes, device emulation, scriptable bot framework. The future is already here.</h5>
+    </div>
+  </div>
+  <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+    <div class="col-12 exokitFeature">
+        <img class="img-fluid mt-4 mb-3" src="media/Squares.png"></img>
+        <h4>Runs existing code</h4>
+        <h4 class="font-weight-light text-left p-4">Don't change your code. Exokit runs regular HTML, WebXR, and WebGL, and frameworks like A-Frame and THREE.js.</h5>
+    </div>
+  </div>
+    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+      <div class="col-12 exokitFeature">
+          <img class="img-fluid mt-4 mb-3" src="media/fork.png"></img>
+          <h4>Not a fork of</h4>
+          <h4>Firefox or Chrome</h4>
+          <h4 class="font-weight-light text-left p-4">Exokit is not a fork of Chrome, Firefox, or anything else. It's fresh open source optimized for XR, by folks who live and breathe it.</h5>
+      </div>
+      <div class="featuresSpacer"></div>
+    </div>
+</div>
+
+<div class="row madeWithExokit mt-5">
 
   <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center">
     <img id="madeWithExokitMainImg" class="img-fluid mb-5" src="media/expanse.png"></img>
   </div>
 
-  <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 madeWithExokitMain">
+  <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 madeWithExokitMain mt-5">
     <h1>Made with Exokit</h1>
     <hr>
 
