footer and features tuneup, fix pic

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
     <h3 class="font-weight-light">Desktop and Mobile.</h1>
     <div id=heroPusher></div>
     <h4>Download now</h4>
-    <a href="https://get.webmr.io/mac"><i class="fab fa-apple fa-2x p-2"></i></a>
-    <a href="https://get.webmr.io/linux"><i class="fab fa-linux fa-2x p-2"></i></a>
-    <a href="https://get.webmr.io/windows"><i class="fab fa-windows fa-2x p-2"></i></a>
+    <a href="https://get.webmr.io/mac"><i class="fab heroDL fa-apple fa-2x p-2"></i></a>
+    <a href="https://get.webmr.io/linux"><i class="fab heroDL fa-linux fa-2x p-2"></i></a>
+    <a href="https://get.webmr.io/windows"><i class="fab heroDL fa-windows fa-2x p-2"></i></a>
 </div>
 
 <div class="row whatIsExokit pt-4">
@@ -387,7 +387,6 @@
   </div>
 </div>
 
-
 <div class="row getStarted justify-content-center" style="padding-top: 150px;">
   <div class="col-12 text-center">
     <h1>Latest WebXR</h1>
@@ -409,13 +408,23 @@
           <p class="font-weight-light">101 Kensington Steet, Monteral, Canada.</p>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+          <a href="">
             <p class="font-weight-light">Support</p>
+          </a>
+          <a href="">
             <p class="font-weight-light">Careers</p>
+          </a>
+          <a href="">
             <p class="font-weight-light">About</p>
+          </a>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-            <p class="font-weight-light">Press</p>
-            <p class="font-weight-light">Investor</p>
+            <a href="">
+              <p class="font-weight-light">Press</p>
+            </a>
+            <a href="">
+              <p class="font-weight-light">Investor</p>
+            </a>
         </div>
       </div>
     </div>
@@ -442,10 +451,14 @@
         <div class="col-12 pl-0">
           <div class="row pt-5">
             <div class="col-6 pl-0">
-              <p>Social</p>
-            </div>
+              <a href="">
+                <p>Social</p>
+              </a>
+              </div>
             <div class="col-6">
-              <p>Community</p>
+              <a href="">
+                <p>Community</p>
+              </a>
             </div>
           </div>
         </div>
