--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,10 @@
 </nav>
 </header>
 
-<div class="row contactSection">
-    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 p-4 pr-5 pl-5">
+<div class="row contactSection pt-4">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 pt-5 forms">
         <h1>Need Help? Send Us a Message!</h1>
+        <br>
         <form>
             <div class="row mt-4">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -53,7 +54,7 @@
             <button type="submit" class="contactButton btn btn-primary inline ml-2 mt-2 mb-2 p-3 pl-5 pr-5">Submit</button>
         </form>
     </div>
-    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 p-4 pr-5 pl-5 pb-5">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 p-5">
         <h1 class="pb-5">Come visit us.</h1>
         <h3 class="font-weight-light">2576 Heather Sees Way</h3>
         <h3 class="font-weight-light">Muskogee OK</h3>
@@ -65,66 +66,80 @@
 </div>
 
 <footer>
-    <div class="row footer">
-      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-4">
+  <div class="row footer">
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-4">
         <div class="row pl-4">
-          <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-            <p>Find Us</p>
-            <br/>
-            <p class="font-weight-light">101 Kensington Steet, Monteral, Canada.</p>
-          </div>
-          <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-              <p class="font-weight-light">Support</p>
-              <p class="font-weight-light">Careers</p>
-              <p class="font-weight-light">About</p>
-          </div>
-          <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-              <p class="font-weight-light">Press</p>
-              <p class="font-weight-light">Investor</p>
-          </div>
+            <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                <p>Find Us</p>
+                <br/>
+                <p class="font-weight-light">101 Kensington Steet, Monteral, Canada.</p>
+                </div>
+            <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                <a href="">
+                    <p class="font-weight-light">Support</p>
+                </a>
+                <a href="">
+                    <p class="font-weight-light">Careers</p>
+                </a>
+                <a href="">
+                    <p class="font-weight-light">About</p>
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                <a href="">
+                <p class="font-weight-light">Press</p>
+                </a>
+                <a href="">
+                <p class="font-weight-light">Investor</p>
+                </a>
+            </div>
         </div>
-      </div>
-      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-5">
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-5">
         <div class="row text-center justify-content-center">
             <form>
-              <div class="form-group form-inline d-inline">
+                <div class="form-group form-inline d-inline">
                 <p class="font-weight-light">Sign up for updates.</p>
                 <input type="email" class="form-control emailInput p-3" aria-describedby="email" placeholder="Email">
                 <button type="submit" class="emailButton btn btn-primary inline ml-2 mt-2 mb-2 p-2 pl-4 pr-4">Sign up</button>
-              </div>
+                </div>
             </form>
         </div>
-      </div>
-      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-4">
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-4">
         <div class="row pl-5">
-          <div class="col-12 pl-0">
-            <p>Find us online</p>
-            <a class="footerLink" href="https://www.twitch.tv/avaer"><i class="fab fa-twitch pt-2 pb-2 pr-2"></i></a>
-            <a class="footerLink" href="https://discordapp.com/invite/Apk6cZN"><i class="fab fa-discord p-2"></i></a>
-            <a class="footerLink" href="https://exokit.slack.com/join/shared_invite/enQtNDI3NjcxNzYwMDIxLWU2NmFmOTEzMzk4NWNiYjRhMjVkYzcyNjg5YjUyMzZkYWM1ZGI4M2IwYWZiMjNlMTJjMDlkM2U3Y2JiNTc2M2Q"><i class="fab fa-slack p-2"></i></a>
-            <a class="footerLink" href="https://twitter.com/webmixedreality"><i class="fab fa-twitter p-2"></i></a>
-          </div>
-          <div class="col-12 pl-0">
-            <div class="row pt-5">
-              <div class="col-6 pl-0">
-                <p>Social</p>
-              </div>
-              <div class="col-6">
-                <p>Community</p>
-              </div>
+            <div class="col-12 pl-0">
+                <p>Find us online</p>
+                <a class="footerLink" href="https://www.twitch.tv/avaer"><i class="fab fa-twitch pt-2 pb-2 pr-2"></i></a>
+                <a class="footerLink" href="https://discordapp.com/invite/Apk6cZN"><i class="fab fa-discord p-2"></i></a>
+                <a class="footerLink" href="https://exokit.slack.com/join/shared_invite/enQtNDI3NjcxNzYwMDIxLWU2NmFmOTEzMzk4NWNiYjRhMjVkYzcyNjg5YjUyMzZkYWM1ZGI4M2IwYWZiMjNlMTJjMDlkM2U3Y2JiNTc2M2Q"><i class="fab fa-slack p-2"></i></a>
+                <a class="footerLink" href="https://twitter.com/webmixedreality"><i class="fab fa-twitter p-2"></i></a>
             </div>
-          </div>
+            <div class="col-12 pl-0">
+                <div class="row pt-5">
+                    <div class="col-6 pl-0">
+                    <a href="">
+                        <p>Social</p>
+                    </a>
+                    </div>
+                    <div class="col-6">
+                    <a href="">
+                        <p>Community</p>
+                    </a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="col-12 pt-4">
-          <div class="row">
+    </div>
+    <div class="col-12 pt-4">
+        <div class="row">
             <div class="col-12">
                 <p class="text-center font-weight-light">Copyright &copy; 2018 Exokit Inc.</p>
             </div>
-          </div>
         </div>
     </div>
-  </footer>
+</div>
+</footer>
 
 </body>
 </html>
